--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "4.0.0-beta.2",
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.4.1",
@@ -23,6 +24,7 @@
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
+    "reactstrap": "^5.0.0-alpha.4",
     "serve-favicon": "^2.4.5"
   },
   "scripts": {
