--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,15 @@
   "plugins": [
     "transform-runtime",
     "transform-decorators-legacy",
-    "transform-class-properties"
+    "transform-class-properties",
+    ["module-resolver", {
+      "root": ["./"],
+      "alias": {
+        "core": "./core",
+        "components": "./src/components",
+        "containers": "./src/containers"
+      }
+    }]
   ],
   "env": {
     "production": {
