--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.4",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.4.5",
+    "webpack-isomorphic-tools": "^3.0.5"
   },
   "scripts": {
     "dev": "node index.js --dev",
