add home page and browse page

--- a/server/mock/apps.json
+++ b/server/mock/apps.json
@@ -14,5 +14,37 @@
     "repo_id": "y1",
     "created": "2018-01-02T09:50:53.499Z",
     "last_modified": "2018-01-02T09:50:53.499Z"
+  },
+  {
+    "id": "app-00r26u28",
+    "name": "MySQL Plus",
+    "description": "金融级强一致性、主从秒级切换、双引擎支持的 MySQL 集群",
+    "repo_id": "y1",
+    "created": "2018-01-02T09:50:53.499Z",
+    "last_modified": "2018-01-02T09:50:53.499Z"
+  },
+  {
+    "id": "app-u0llx5j9",
+    "name": "Kubernetes",
+    "description": "Kubernetes是一款管理容器应用的开源管理系统",
+    "repo_id": "y1",
+    "created": "2018-01-02T09:50:53.499Z",
+    "last_modified": "2018-01-02T09:50:53.499Z"
+  },
+  {
+    "id": "app-00r26u29",
+    "name": "MySQL Plus",
+    "description": "金融级强一致性、主从秒级切换、双引擎支持的 MySQL 集群",
+    "repo_id": "y1",
+    "created": "2018-01-02T09:50:53.499Z",
+    "last_modified": "2018-01-02T09:50:53.499Z"
+  },
+  {
+    "id": "app-u0llx5j6",
+    "name": "Kubernetes",
+    "description": "Kubernetes是一款管理容器应用的开源管理系统",
+    "repo_id": "y1",
+    "created": "2018-01-02T09:50:53.499Z",
+    "last_modified": "2018-01-02T09:50:53.499Z"
   }
 ]
