--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.4",
+    "semver": "^5.4.1",
     "serve-favicon": "^2.4.5",
     "webpack-isomorphic-tools": "^3.0.5"
   },
