--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "chalk": "1.1.3",
     "chokidar": "^2.0.0",
     "css-loader": "0.28.4",
-    "eslint": "4.4.1",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-import-resolver-babel-module": "^4.0.0",
