--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
+    "koa-views": "^6.1.3",
     "lodash": "^4.17.4",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
+    "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
@@ -29,9 +31,10 @@
     "webpack-isomorphic-tools": "^3.0.5"
   },
   "scripts": {
-    "dev": "node index.js --dev",
+    "dev": "DEBUG=koa* node index.js --dev",
     "prod": "node index.js --prod",
-    "build": "node config/webpack.prod.js"
+    "build": "node config/webpack.prod.js",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
