add manage-clusters & manage-clusters-detail page

--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
       "alias": {
         "core": "./core",
         "components": "./src/components",
-        "containers": "./src/containers"
+        "containers": "./src/containers",
+        "utils": "./src/utils"
       }
     }]
   ],
