--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
+    "rc-pagination": "^1.14.0",
+    "rc-table": "^6.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
