--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "dev": "DEBUG=koa-router node index.js --dev",
     "prod": "node index.js --prod",
     "build": "node config/webpack.prod.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "NODE_ENV=testing jest --config jest.config.json"
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
-    "babel-core": "6.25.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.0.6",
     "babel-loader": "7.1.1",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -57,6 +59,8 @@
     "chalk": "1.1.3",
     "chokidar": "^2.0.0",
     "css-loader": "0.28.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -71,10 +75,12 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^1.1.6",
     "fs-extra-promise": "^1.0.1",
+    "jest": "^22.0.6",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
+    "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "url-loader": "0.5.9",
