--- a/jest.config.json
+++ b/jest.config.json
@@ -4,6 +4,7 @@
     "^.+\\.jsx?$": "babel-jest"
   },
   "moduleNameMapper": {
-    "\\.(css|scss|png|svg)$": "<rootDir>/config/assetsTransformer.js"
+    "\\.(png|svg)$": "<rootDir>/config/assetsTransformer.js",    
+    "\\.(css|scss)$": "identity-obj-proxy"
   }
 }
