--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^1.1.6",
     "fs-extra-promise": "^1.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.0.6",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
