--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-modal": "^3.1.10",
+    "react-popper": "^0.8.2",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
