1. improve server side architecture 2. remove isomorphic-webpack-tool, only using babel toolchain 3. update npm scripts 4. improve webpack config

--- a/.babelrc
+++ b/.babelrc
@@ -1,26 +1,53 @@
 {
-  "presets": ["env", "stage-0", "react"],
-  "comments": false,
+  "presets": [
+    "env",
+    "stage-0",
+    "react"
+  ],
   "plugins": [
     "transform-runtime",
     "transform-decorators-legacy",
     "transform-class-properties",
-    ["module-resolver", {
-      "root": ["./", "./src/**"],
-      "alias": {
-
+    [
+      "module-resolver",
+      {
+        "root": [
+          "./",
+          "./src/**"
+        ],
+        "alias": {
+        }
       }
-    }]
+    ]
   ],
   "env": {
     "production": {
-      "plugins": [[
-        "transform-react-remove-prop-types",
-        {
-          "removeImport": true,
-          "ignoreFilenames": ["node_modules", "transition"]
-        }
-      ]]
+      "plugins": [
+        [
+          "transform-react-remove-prop-types",
+          {
+            "removeImport": true,
+            "ignoreFilenames": [
+              "node_modules",
+              "transition"
+            ]
+          }
+        ]
+      ]
+    },
+    "server": {
+      "plugins": [
+        [
+          "css-modules-transform",
+          {
+            "generateScopedName": "[folder]__[local]--[hash:base64:5]",
+            "extensions": [
+              ".css",
+              ".scss"
+            ]
+          }
+        ]
+      ]
     },
     "development": {
       "plugins": [
