add jest setup file and the component snapshot test

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,8 +1,11 @@
 {
+  "setupFiles": [
+    "./tests/setup.js"
+  ],
   "bail": true,
   "transform": {
     "^.+\\.jsx?$": "babel-jest"
-  },
+  }, 
   "moduleNameMapper": {
     "\\.(png|svg)$": "<rootDir>/config/assetsTransformer.js",    
     "\\.(css|scss)$": "identity-obj-proxy"
