--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
+    "js-yaml": "^3.10.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
@@ -16,6 +18,7 @@
     "lodash": "^4.17.4",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
+    "node-cache": "^4.1.1",
     "normalize.css": "^7.0.0",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
@@ -32,22 +35,30 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.4",
     "semver": "^5.4.1",
-    "serve-favicon": "^2.4.5",
-    "webpack-isomorphic-tools": "^3.0.5"
+    "serve-favicon": "^2.4.5"
   },
   "scripts": {
-    "dev": "DEBUG=koa-router node index.js --dev",
-    "prod": "node index.js --prod",
-    "build": "node config/webpack.prod.js",
-    "lint": "eslint .",
-    "test": "NODE_ENV=testing jest --config jest.config.json"
+    "dev": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development nodemon -w ./lib -w ./server --exec babel-node server/server.js",
+    "prod": "rimraf dist && npm run pack:prod && npm run dist && npm run serve",
+    "lint": "eslint . --fix",
+    "test": "NODE_ENV=testing jest --config jest.config.json",
+    "pack:dev": "NODE_ENV=development webpack --config webpack.dev.js --progress",
+    "pack:prod": "NODE_ENV=production webpack -p --config webpack.prod.js --progress",
+    "dist:server": "BABEL_ENV=server NODE_ENV=production babel server -d dist/server --copy-files",
+    "dist:lib": "BABEL_ENV=server NODE_ENV=production babel lib -d dist/lib --copy-files",
+    "dist:src": "BABEL_ENV=server NODE_ENV=production babel src -d dist/src --copy-files",
+    "dist": "npm run dist:server && npm run dist:lib && npm run dist:src",
+    "serve": "DEBUG=koa-router NODE_ENV=production node dist/server/server.js"
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.0.6",
     "babel-loader": "7.1.1",
+    "babel-minify-webpack-plugin": "^0.3.0",
+    "babel-plugin-css-modules-transform": "^1.5.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -75,19 +86,20 @@
     "eslint-plugin-standard": "^2.0.1",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "^1.1.6",
-    "fs-extra-promise": "^1.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.0.6",
+    "koa-webpack": "^2.0.3",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.15.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "react-test-renderer": "^16.2.0",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "url-loader": "0.5.9",
-    "webpack": "3.5.1",
-    "webpack-dev-server": "2.7.1"
+    "webpack": "^3"
   },
   "engines": {
     "node": ">= 7.6.0"
