--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "dist:src": "BABEL_ENV=server NODE_ENV=production babel src -d dist/src --copy-files",
     "dist": "npm run dist:server && npm run dist:lib && npm run dist:src",
     "serve": "DEBUG=koa-router NODE_ENV=production node dist/server/server.js",
-    "postinstall": "npm rebuild node-sass --force"
+    "postinstall": "npm rebuild node-sass"
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
