--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     ["env", {
       "targets": {
         "node": "7.6",
-        "browser": ["> 5%", "last 2 versions", "ie >= 9"]
+        "browser": ["> 1%", "last 4 versions", "not ie < 9"]
       }
     }],
     "stage-1",
