--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,18 @@
 {
   "presets": [
-    "env",
-    "stage-0",
+    ["env", {
+      "targets": {
+        "node": "7.6",
+        "browser": ["> 1%", "last 4 versions", "not ie < 9"]
+      }
+    }],
+    "stage-1",
     "react"
   ],
   "plugins": [
     "transform-runtime",
     "transform-decorators-legacy",
-    "transform-class-properties",
+    "lodash",
     [
       "module-resolver",
       {
