upgrade: separate common styles from main.scss (#45)
1. separate common styles from main.scss
2. fix absolute path in banner component
3. add webpack notifier
4. change nav link names, fix Banner test snapshot

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "serve-favicon": "^2.4.5"
   },
   "scripts": {
-    "dev": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development BABEL_CACHE_PATH=./build/babel-cache.json nodemon -w './lib/**/*.js' -w './server/**/*.js' --exec babel-node server/server.js",
+    "dev": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development nodemon -w './lib/**/*.js' -w './server/**/*.js' --exec babel-node server/server.js",
     "prod": "rimraf dist && npm run pack:prod && npm run dist && npm run serve",
     "lint": "eslint . --fix",
     "test": "NODE_ENV=testing jest --config jest.config.json",
@@ -107,7 +107,8 @@
     "url-loader": "0.5.9",
     "webpack": "^3",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-notifier": "^1.6.0"
   },
   "engines": {
     "node": ">= 7.6.0"
