serverUrl update localhost

--- a/server/config.yml
+++ b/server/config.yml
@@ -13,8 +13,8 @@ http:
       /dist: dist
 
 # mock server url
-serverUrl: http://139.198.11.221:7300/mock/5a7acd265fbf5132a58d61e4
-# serverUrl: http://localhost:3000
+# serverUrl: http://139.198.11.221:7300/mock/5a7acd265fbf5132a58d61e4
+serverUrl: http://localhost:3000
 
 app:
   name: OpenPitrix Dashboard
