--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "app-root-path": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
     "js-yaml": "^3.10.0",
@@ -13,6 +14,7 @@
     "koa-favicon": "^2.0.0",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
+    "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
     "lodash": "^4.17.5",
