--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa-favicon": "^2.0.0",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
+    "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.3",
     "lodash": "^4.17.5",
