--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "js-yaml": "^3.10.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
-    "koa-convert": "^1.2.0",
     "koa-favicon": "^2.0.0",
     "koa-mount": "^3.0.0",
     "koa-router": "^7.3.0",
@@ -36,10 +35,11 @@
     "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0-alpha.4",
     "semver": "^5.4.1",
-    "serve-favicon": "^2.4.5"
+    "serve-favicon": "^2.4.5",
+    "superagent": "^3.8.3"
   },
   "scripts": {
-    "dev": "DEBUG=koa*,-koa-views BABEL_ENV=server COMPILE_CLIENT=true NODE_ENV=development nodemon -w lib -w server --exec node server/server.js",
+    "dev": "DEBUG=koa-router BABEL_ENV=server COMPILE_CLIENT=true NODE_ENV=development nodemon -w lib -w server --exec node server/server.js",
     "prod": "rimraf dist && npm run pack:prod && npm run serve:dist",
     "lint": "eslint . --fix",
     "test:single": "NODE_ENV=testing jest --config jest.config.json -u",
@@ -49,7 +49,8 @@
     "serve:dist": "DEBUG=koa*,-koa-views node dist/server.js",
     "precommit": "yarn test && lint-staged",
     "bundle:analyse": "webpack --config webpack.dev.js --profile --progress --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
-    "report-cov": "cat ./coverage/lcov.info | codecov"
+    "report-cov": "cat ./coverage/lcov.info | codecov",
+    "dbg": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js"
   },
   "lint-staged": {
     "*.{js,jsx,md,test.js.snap}": [
