feat: runtime and repo creation, enhance manage page container component - separate component business logic to store, enhance root store register - deprecate isomorphic-fetch, using superagent - upgrade api forward logic - refactor manage tabs - refactor repo page

--- a/server/config.yml
+++ b/server/config.yml
@@ -18,12 +18,12 @@ serverUrl: http://139.198.11.221:7300/mock/5a7acd265fbf5132a58d61e4
 app:
   name: OpenPitrix Dashboard
   navs:
-  - title: Discover
-    value:
-    - title: Top Trending
-      value: top
-    - title: Essential Apps
-      value: essential
+#  - title: Discover
+#    value:
+#    - title: Top Trending
+#      value: top
+#    - title: Essential Apps
+#      value: essential
   - title: Categories
     value:
     - title: Software Infrastructure
@@ -38,17 +38,18 @@ app:
       value: security
     - title: Analysis
       value: analysis
-  - title: Cloud Manufacture
-    value:
-    - title: Amazon
-      value: amazon
-    - title: Microsoft
-      value: microsoft
-    - title: Google
-      value: google
-    - title: QingCloud
-      value: qingcloud
-    - title: VMWare
-      value: wmware
-    - title: See All
-      value: all
+
+#  - title: Cloud Manufacture
+#    value:
+#    - title: Amazon
+#      value: amazon
+#    - title: Microsoft
+#      value: microsoft
+#    - title: Google
+#      value: google
+#    - title: QingCloud
+#      value: qingcloud
+#    - title: VMWare
+#      value: wmware
+#    - title: See All
+#      value: all
