--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.3.1",
-    "react-popper": "^0.8.2",
+    "react-popper": ">=0.10",
     "react-router": "^4.2.0",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
@@ -93,7 +93,7 @@
     "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.0.6",
+    "jest": "^23",
     "koa-webpack": "^2.0.3",
     "lint-staged": "^7.0.4",
     "node-sass": "^4.5.3",
