optimize webpack build, refactor server watcher on dev mode - remove useless packages due to performance - add vendor and common chunk build  for webpack

--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "lodash": "^4.17.5",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
-    "node-cache": "^4.1.1",
-    "normalize.css": "^7.0.0",
     "promise-polyfill": "^7.0.0",
     "prop-types": "^15.6.0",
     "pug": "^2.0.0-rc.4",
@@ -38,16 +36,19 @@
     "superagent": "^3.8.3"
   },
   "scripts": {
-    "dev": "DEBUG=koa-router BABEL_ENV=server COMPILE_CLIENT=true NODE_ENV=development nodemon -w lib -w server --exec node server/server.js",
-    "prod": "rimraf dist && npm run pack:prod && npm run serve:dist",
+    "dev:vendor": "NODE_ENV=development webpack --config webpack.vendor.js --progress",
+    "dev:client": "NODE_ENV=development webpack --config webpack.dev.js --progress",
+    "dev:serve": "DEBUG=koa-*,-koa-views BABEL_ENV=server COMPILE_CLIENT=true NODE_ENV=development node server/server.js",
+    "server": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development node server/server.js",
+    "dev": "npm run dev:vendor && npm run dev:client && npm run server",
+    "prod:build": "NODE_ENV=production webpack -p --config webpack.prod.js --progress",
+    "prod:serve": "DEBUG=koa-router node dist/server.js",
+    "prod": "rimraf dist && npm run prod:build && npm run prod:serve",
     "lint": "eslint . --fix",
     "test:single": "NODE_ENV=testing jest --config jest.config.json -u",
     "test": "npm run test:single -- --coverage",
-    "pack:dev": "NODE_ENV=development webpack --config webpack.dev.js --progress -w",
-    "pack:prod": "NODE_ENV=production webpack -p --config webpack.prod.js --progress",
-    "serve:dist": "DEBUG=koa*,-koa-views node dist/server.js",
     "precommit": "yarn test && lint-staged",
-    "bundle:analyse": "webpack --config webpack.dev.js --profile --progress --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
+    "viz": "webpack --config webpack.dev.js --profile --progress --json > reports/stats.json && webpack-bundle-analyzer reports/stats.json",
     "report-cov": "cat ./coverage/lcov.info | codecov",
     "dbg": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development node --inspect-brk server/server.js"
   },
@@ -77,7 +78,7 @@
     "babel-register": "^6.26.0",
     "babel-runtime": "6.23.0",
     "chalk": "1.1.3",
-    "chokidar": "^2.0.0",
+    "chokidar": "^2.0.3",
     "codecov": "^3.0.2",
     "css-loader": "0.28.4",
     "enzyme": "^3.3.0",
@@ -97,7 +98,6 @@
     "koa-webpack": "^2.0.3",
     "lint-staged": "^7.0.4",
     "node-sass": "^4.5.3",
-    "nodemon": "^1.15.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
