--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dev:client": "NODE_ENV=development webpack --config webpack.dev.js --progress",
     "dev:serve": "DEBUG=koa-*,-koa-views BABEL_ENV=server COMPILE_CLIENT=true NODE_ENV=development node server/server.js",
     "server": "DEBUG=koa-router BABEL_ENV=server NODE_ENV=development node server/server.js",
+    "dev:watch": "npm run dev:vendor && npm run dev:client -- --watch",
     "dev": "npm run dev:vendor && npm run dev:client && npm run server",
     "prod:build": "NODE_ENV=production webpack -p --config webpack.prod.js --progress",
     "prod:serve": "DEBUG=koa-router node dist/server.js",
@@ -110,8 +111,7 @@
     "webpack": "^3",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.1.3",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-notifier": "^1.6.0"
+    "webpack-node-externals": "^1.7.2"
   },
   "engines": {
     "node": ">= 7.6.0"
