--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "app-root-path": "^2.0.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "deepmerge": "^2.1.0",
+    "js-base64": "^2.4.5",
     "js-yaml": "^3.10.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
