--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rc-table": "^6.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
     "react-popper": ">=0.10",
     "react-router": "^4.2.0",
