--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "app-root-path": "^2.0.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "deepmerge": "^2.1.0",
+    "js-base64": "^2.4.5",
     "js-yaml": "^3.10.0",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
@@ -27,6 +29,7 @@
     "rc-table": "^6.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
     "react-popper": ">=0.10",
     "react-router": "^4.2.0",
