dockerfile add build_env arg, no verbose message on cloud build - fix home appList - remove webpack.vendor.js, reduce files, move some config files to config/

--- a/jest.config.json
+++ b/jest.config.json
@@ -8,7 +8,7 @@
     "^.+\\.jsx?$": "babel-jest"
   }, 
   "moduleNameMapper": {
-    "\\.(png|svg)$": "<rootDir>/assets.transformer.js",
+    "\\.(png|svg)$": "<rootDir>/config/assets.transformer.js",
     "\\.(css|scss)$": "identity-obj-proxy"
   },
   "coverageDirectory": "./coverage/",
