[wip] feat: app i18n

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
     "deepmerge": "^2.1.0",
+    "i18next": "^11.3.3",
+    "i18next-browser-languagedetector": "^2.2.0",
     "js-base64": "^2.4.5",
     "js-yaml": "^3.10.0",
     "koa": "^2.4.1",
@@ -28,6 +30,7 @@
     "rc-table": "^6.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-i18next": "^7.7.0",
     "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
     "react-popper": ">=0.10",
