--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.26.0",
     "codecov": "^3.0.2",
-    "css-loader": "0.28.4",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
@@ -93,7 +93,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
@@ -110,9 +110,9 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "url-loader": "0.5.9",
-    "webpack": "^3",
+    "webpack": "^4.14.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.1.3",
+    "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
