--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-runtime": "^6.26.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
+    "clipboard": "^2.0.1",
     "debug": "^3.1.0",
     "deepmerge": "^2.1.0",
     "i18next": "^11.3.3",
