--- a/server/config.yml
+++ b/server/config.yml
@@ -7,6 +7,7 @@ port: 8000
 favicon: src/assets/favicon.ico
 static:
   /assets: src/assets
+  /locales: /locales
   development:
     /build: build
   production:
