--- a/jest.config.json
+++ b/jest.config.json
@@ -16,5 +16,9 @@
     "src/{components,containers}/**/*.{js,jsx}",
     "src/utils/*.js",
     "!**/node_modules/**"
+  ],
+  "testPathIgnorePatterns": [
+    "/e2e/",
+    "/node_modules/"
   ]
 }
