--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,21 @@ node_js:
   - "9"
   - "8"
   - "7"
-cache: yarn
+
+cache:
+  yarn: true
+  directories:
+    - "node_modules"
+
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.7.0
+  - export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
   - yarn
+
 script:
   - yarn test
+
 after_success:
   - yarn run report-cov
