--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clipboard": "^2.0.1",
     "debug": "^3.1.0",
     "deepmerge": "^2.1.0",
+    "hoist-non-react-statics": "^2.5.5",
     "i18next": "^11.3.3",
     "i18next-browser-languagedetector": "^2.2.0",
     "js-base64": "^2.4.5",
