--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
     "clipboard": "^2.0.1",
+    "dayjs": "^1.7.4",
     "debug": "^3.1.0",
     "deepmerge": "^2.1.0",
     "hoist-non-react-statics": "^2.5.5",
