--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "superagent": "^3.8.3"
   },
   "scripts": {
-    "dev:client": "NODE_ENV=development webpack --config webpack.dev.js --progress",
+    "dev:client": "rimraf build && NODE_ENV=development webpack --config webpack.dev.js --progress",
     "server": "DEBUG=op-dash BABEL_ENV=server NODE_ENV=development node server/server.js",
     "dev:watch": "npm run dev:client -- --watch",
     "dev": "rimraf build && npm run dev:client && npm run server",
-    "prod:build": "NODE_ENV=production webpack -p --config webpack.prod.js --progress",
-    "prod:serve": "NODE_ENV=production DEBUG=op-dash,koa-*,-koa-router,-koa-views node dist/server.js",
-    "prod": "rimraf dist && npm run prod:build && npm run prod:serve",
+    "prod:build": "rimraf dist && NODE_ENV=production webpack -p --config webpack.prod.js --progress",
+    "prod:serve": "NODE_ENV=production DEBUG=op-dash,-koa-router,-koa-views node dist/server.js",
+    "prod": "npm run prod:build && npm run prod:serve",
     "lint": "eslint . --fix",
     "test:single": "NODE_ENV=testing jest --config jest.config.json -u",
     "test": "npm run test:single -- --coverage",
@@ -114,6 +114,7 @@
     "webpack": "^4.14.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^3.0.8",
+    "webpack-manifest-plugin": "^2.0.3",
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
