--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "^3.1.0",
     "deepmerge": "^2.1.0",
     "i18next": "^11.3.3",
+    "i18next-browser-languagedetector": "^2.2.3",
     "js-base64": "^2.4.5",
     "js-yaml": "^3.10.0",
     "koa": "^2.4.1",
