--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "app-root-path": "^2.0.1",
+    "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-runtime": "^6.26.0",
     "chokidar": "^2.0.4",
     "classnames": "^2.2.5",
@@ -31,6 +32,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-i18next": "^7.7.0",
+    "react-loadable": "^5.4.0",
     "react-markdown": "^3.3.4",
     "react-modal": "^3.3.1",
     "react-popper": ">=0.10",
@@ -73,8 +75,10 @@
     "babel-jest": "^22.0.6",
     "babel-loader": "7.1.1",
     "babel-plugin-css-modules-transform": "^1.5.0",
+    "babel-plugin-import-inspector": "^2.0.0",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -97,6 +101,7 @@
     "file-loader": "^1.1.6",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
+    "import-inspector": "^2.0.0",
     "jest": "^23",
     "koa-webpack": "^2.0.3",
     "lint-staged": "^7.0.4",
@@ -115,6 +120,7 @@
     "webpack": "^4.14.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^3.0.8",
+    "webpack-manifest-plugin": "^2.0.3",
     "webpack-node-externals": "^1.7.2"
   },
   "engines": {
