feat: Build docker image in travis-ci (#268)
Add deploy-docker.sh to build and push docker image manually
Remove dockerfile.slim
Travis.yml remove node v7, v8
Fix makefile

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,39 @@
-language: node_js
-sudo: false
+sudo: required
+
 dist: trusty
+
+services:
+  - docker
+
+language: node_js
+
 node_js:
-  - "9"
-  - "8"
-  - "7"
+  - '9'
+
+env:
+  global:
+    - COMMIT=${TRAVIS_COMMIT::8}
+    - REPO=openpitrix/dashboard
 
 cache:
   yarn: true
   directories:
-    - "node_modules"
+    - node_modules
 
 install:
   - yarn
 
 script:
   - yarn test
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
 
 after_success:
-  - yarn run report-cov
+  - yarn report-cov
+  - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+  - if [[ $TRAVIS_PULL_REQUEST == "false" ]] && [[ $TRAVIS_BRANCH == "master" ]]; then
+    docker build -t $REPO:$COMMIT .
+    docker tag $REPO:$COMMIT $REPO:$TAG
+    docker push $REPO:$TAG;
+    fi
+
+
