--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_deploy:
   - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
 
 deploy:
+  skip_cleanup: true
   provider: script
   script: deploy-docker.sh
   on:
